syntax = "proto3";

package inst;

option go_package = "/inst";

message Institution {
    int64 id = 1;
    string name = 2;
    string description = 3;
    string website = 4;
    int64 owner_id = 5;
    string latitude = 6;
    string longitude = 7;
    string address = 8;
    string phone = 9;
    string country = 10;
    string city = 11;
    int64 category_id = 12;
    int32 version = 13;
}

message InstitutionCategory {
    int64 id = 1;
    string name = 2;
    string description = 3;
}
message GetInstitutionCategoriesRequest{}

message GetInstitutionsByIdRequest {
    int64 id = 1;
}

message GetInstitutionsByCategoryRequest {
    int32 page_number = 1;
    int32 page_size = 2;
    int64 category_id = 3;
    string sort = 4;
}

message CreateInstitutionRequest {
    string name = 1;
    string description = 2;
    string website = 3;
    int64 owner_id = 4;
    string latitude = 5;
    string longitude = 6;
    string address = 7;
    string phone = 8;
    string country = 9;
    string city = 10;
    int64 category_id = 11;
}
message CreateInstitutionResponse {
    int64 id = 1;
}

message UpdateInstitutionRequest {
    int64 id = 1;
    string name = 2;
    string description = 3;
    string website = 4;
    int64 owner_id = 5;
    string latitude = 6;
    string longitude = 7;
    string address = 8;
    string phone = 9;
    string country = 10;
    string city = 11;
    int64 category_id = 12;
    int32 version = 13;
}

message UpdateInstitutionResponse {
    int64 id = 1;
}

message DeleteInstitutionRequest {
    int64 id = 1;
}
message DeleteInstitutionResponse {
    int64 id = 1;
}


message SearchInstitutionsRequest {
    int32 page_number = 1;
    int32 page_size = 2;
    string searchText = 3;
    string sort = 4;
    int64 category_id = 5;
}

message Metadata {
    int32 current_page = 1;
    int32 page_size = 2;
    int32 last_page = 3;
    int32 total_records = 4;
    int32 first_page = 5;
}

message InstitutionsResponse {
    repeated Institution institution = 1;
    Metadata metadata = 2;
}

message CategoryResponse {
    repeated InstitutionCategory category = 1;
    
}

service InstitutionService {
    rpc GetInstitution(GetInstitutionsByIdRequest) returns (Institution) {}
    rpc GetInstitutionsByCategory(GetInstitutionsByCategoryRequest) returns (InstitutionsResponse) {}
    rpc CreateInstitution(CreateInstitutionRequest) returns (CreateInstitutionResponse) {}
    rpc UpdateInstitution(UpdateInstitutionRequest) returns (UpdateInstitutionResponse) {}
    rpc DeleteInstitution(DeleteInstitutionRequest) returns (DeleteInstitutionResponse) {}
    rpc SearchInstitutions(SearchInstitutionsRequest) returns (InstitutionsResponse) {}
}

service CategoryService {
    rpc GetInstitutionCategories(GetInstitutionCategoriesRequest) returns (CategoryResponse) {}
    rpc CreateCategory(InstitutionCategory) returns (InstitutionCategory) {}
}
